[ADD] data-model

--- a/client/components/tc-books/tc-book-form.html
+++ b/client/components/tc-books/tc-book-form.html
@@ -9,6 +9,10 @@
         Polymer({
             is: 'tc-book-form',
             properties: {
+                _data: {
+                    type: Object,
+                    value: {}
+                }
             }
         });
     })();
