[ADD] tc-book-form: Author field

--- a/client/components/tc-books/tc-book-form.html
+++ b/client/components/tc-books/tc-book-form.html
@@ -18,6 +18,13 @@
                 required
                 error-message="title is required">
             </paper-input>
+            <paper-input id="author"
+                label="Author"
+                value="{{_data.author}}"
+                auto-validate
+                required
+                error-message="Author is required">
+            </paper-input>
             <paper-input id="description"
                 label="Description"
                 value="{{_data.description}}">
