--- a/client/components/tc-books/tc-book-form.html
+++ b/client/components/tc-books/tc-book-form.html
@@ -29,10 +29,15 @@
                 label="Description"
                 value="{{_data.description}}">
             </paper-input>
+            <paper-button id="delete" on-tap="_delete">[[deleteText]]</paper-button>
+            <paper-button id="submit" on-tap="_submit">[[submitText]]</paper-button>
             <iron-ajax id="putAjax"
                     method="PUT"
                     content-type="application/json"
                     url="[[requestUrl]]">
+            </iron-ajax>
+            <iron-ajax id="deleteAjax"
+                    method="DELETE"
             </iron-ajax>
             <paper-toast id="toast" text="[[errorText]]"></paper-toast>
         </form>
@@ -57,6 +62,14 @@
                      type: String,
                     value: 'Something went wrong',
                 },
+                deleteText:{
+                    type: String,
+                    value: 'Delete',
+                },
+                submitText:{
+                    type: String,
+                    value: 'Submit',
+                },
             },
             _submit: function() {
                 if (this.$.form.checkValidity()){
@@ -66,6 +79,10 @@
                 } else {
                     this._handleError('At least one field is invalid.');
                 }
+            },
+            _delete: function(){
+                this.$.deleteAjax.url = this.requestUrl + '/_id/' + this._data._id;
+                this.$.deleteAjax.generateRequest();
             },
             _handleError: function(text){
                 this.errorText = text;
